--- a/styling.css
+++ b/styling.css
@@ -181,7 +181,7 @@ h2{
         
     }
     .image img{
-        width:100%;
+        max-width:100%;
         max-height:100%;
         margin-left:90px;
         padding-left: 0;
